--- a/files/饼状分布图.html
+++ b/files/饼状分布图.html
@@ -7,11 +7,11 @@
 
 </head>
 <body>
-    <div id="a545e767208e4c5697cdf4879c7e9e7b" class="chart-container" style="width:900px; height:500px;"></div>
+    <div id="3e6d27e0b91d4b4c97df1a78893d432e" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_a545e767208e4c5697cdf4879c7e9e7b = echarts.init(
-            document.getElementById('a545e767208e4c5697cdf4879c7e9e7b'), 'white', {renderer: 'canvas'});
-        var option_a545e767208e4c5697cdf4879c7e9e7b = {
+        var chart_3e6d27e0b91d4b4c97df1a78893d432e = echarts.init(
+            document.getElementById('3e6d27e0b91d4b4c97df1a78893d432e'), 'white', {renderer: 'canvas'});
+        var option_3e6d27e0b91d4b4c97df1a78893d432e = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -415,13 +415,13 @@
     },
     "title": [
         {
-            "text": "\u300a\u5c11\u5e74\u7684\u4f60\u300b\u8bc4\u661f",
+            "text": "\u8bc4\u661f",
             "padding": 5,
             "itemGap": 10
         }
     ]
 };
-        chart_a545e767208e4c5697cdf4879c7e9e7b.setOption(option_a545e767208e4c5697cdf4879c7e9e7b);
+        chart_3e6d27e0b91d4b4c97df1a78893d432e.setOption(option_3e6d27e0b91d4b4c97df1a78893d432e);
     </script>
 </body>
 </html>
